@@ -42,6 +42,7 @@ package org.jfree.data.general;
 
 import java.io.Serializable;
 import java.util.List;
+import org.jfree.chart.util.CloneUtils;
 import org.jfree.chart.util.PublicCloneable;
 
 import org.jfree.data.KeyedObjects2D;
@@ -50,20 +51,21 @@ import org.jfree.data.category.IntervalCategoryDataset;
 /**
  * A test implementation of the {@link IntervalCategoryDataset} interface.
  */
-public class TestIntervalCategoryDataset extends AbstractDataset
-        implements IntervalCategoryDataset, PublicCloneable, Serializable {
+public class TestIntervalCategoryDataset<R extends Comparable<R>, 
+        C extends Comparable<C>>  extends AbstractDataset
+        implements IntervalCategoryDataset<R, C>, PublicCloneable, Serializable {
 
     /** For serialization. */
     private static final long serialVersionUID = -8168173757291644622L;
 
     /** A storage structure for the data. */
-    private KeyedObjects2D data;
+    private KeyedObjects2D<R, C> data;
 
     /**
      * Creates a new (empty) dataset.
      */
     public TestIntervalCategoryDataset() {
-        this.data = new KeyedObjects2D();
+        this.data = new KeyedObjects2D<>();
     }
 
     /**
@@ -123,7 +125,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getColumnKey(int)
      */
     @Override
-    public Comparable getRowKey(int row) {
+    public R getRowKey(int row) {
         return this.data.getRowKey(row);
     }
 
@@ -137,7 +139,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getRowKey(int)
      */
     @Override
-    public int getRowIndex(Comparable key) {
+    public int getRowIndex(R key) {
         // defer null argument check
         return this.data.getRowIndex(key);
     }
@@ -150,7 +152,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getRowKey(int)
      */
     @Override
-    public List getRowKeys() {
+    public List<R> getRowKeys() {
         return this.data.getRowKeys();
     }
 
@@ -164,7 +166,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getColumnIndex(Comparable)
      */
     @Override
-    public Comparable getColumnKey(int column) {
+    public C getColumnKey(int column) {
         return this.data.getColumnKey(column);
     }
 
@@ -178,7 +180,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getColumnKey(int)
      */
     @Override
-    public int getColumnIndex(Comparable key) {
+    public int getColumnIndex(C key) {
         // defer null argument check
         return this.data.getColumnIndex(key);
     }
@@ -191,7 +193,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getColumnKey(int)
      */
     @Override
-    public List getColumnKeys() {
+    public List<C> getColumnKeys() {
         return this.data.getColumnKeys();
     }
 
@@ -208,7 +210,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #addValue(Number, Comparable, Comparable)
      */
     @Override
-    public Number getValue(Comparable rowKey, Comparable columnKey) {
+    public Number getValue(R rowKey, C columnKey) {
         IntervalDataItem item = (IntervalDataItem) this.data.getObject(rowKey,
                 columnKey);
         if (item == null) {
@@ -228,7 +230,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #removeValue(Comparable, Comparable)
      */
     public void addItem(Number value, Number lower, Number upper,
-            Comparable rowKey, Comparable columnKey) {
+            R rowKey, C columnKey) {
         IntervalDataItem item = new IntervalDataItem(value, lower, upper);
         this.data.addObject(item, rowKey, columnKey);
         fireDatasetChanged();
@@ -244,8 +246,8 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getValue(Comparable, Comparable)
      */
     public void addItem(double value, double lower, double upper,
-            Comparable rowKey, Comparable columnKey) {
-        addItem(new Double(value), new Double(lower), new Double(upper),
+            R rowKey, C columnKey) {
+        addItem(Double.valueOf(value), Double.valueOf(lower), Double.valueOf(upper),
                 rowKey, columnKey);
     }
 
@@ -260,7 +262,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getValue(Comparable, Comparable)
      */
     public void setItem(Number value, Number lower, Number upper,
-            Comparable rowKey, Comparable columnKey) {
+            R rowKey, C columnKey) {
         IntervalDataItem item = new IntervalDataItem(value, lower, upper);
         this.data.addObject(item, rowKey, columnKey);
         fireDatasetChanged();
@@ -277,8 +279,8 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @see #getValue(Comparable, Comparable)
      */
     public void setItem(double value, double lower, double upper,
-            Comparable rowKey, Comparable columnKey) {
-        setItem(new Double(value), new Double(lower), new Double(upper),
+            R rowKey, C columnKey) {
+        setItem(Double.valueOf(value), Double.valueOf(lower), Double.valueOf(upper),
                 rowKey, columnKey);
     }
 
@@ -291,7 +293,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      *
      * @see #addValue(Number, Comparable, Comparable)
      */
-    public void removeItem(Comparable rowKey, Comparable columnKey) {
+    public void removeItem(R rowKey, C columnKey) {
         this.data.removeObject(rowKey, columnKey);
         fireDatasetChanged();
     }
@@ -317,7 +319,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      *
      * @see #removeColumn(Comparable)
      */
-    public void removeRow(Comparable rowKey) {
+    public void removeRow(R rowKey) {
         this.data.removeRow(rowKey);
         fireDatasetChanged();
     }
@@ -346,7 +348,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      * @throws UnknownKeyException if {@code columnKey} is not defined
      *         in the dataset.
      */
-    public void removeColumn(Comparable columnKey) {
+    public void removeColumn(C columnKey) {
         this.data.removeColumn(columnKey);
         fireDatasetChanged();
     }
@@ -375,7 +377,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
         if (!(obj instanceof TestIntervalCategoryDataset)) {
             return false;
         }
-        TestIntervalCategoryDataset that = (TestIntervalCategoryDataset) obj;
+        TestIntervalCategoryDataset<R, C> that = (TestIntervalCategoryDataset) obj;
         if (!getRowKeys().equals(that.getRowKeys())) {
             return false;
         }
@@ -421,9 +423,9 @@ public class TestIntervalCategoryDataset extends AbstractDataset
      */
     @Override
     public Object clone() throws CloneNotSupportedException {
-        TestIntervalCategoryDataset clone = (TestIntervalCategoryDataset)
+        TestIntervalCategoryDataset<R, C> clone = (TestIntervalCategoryDataset)
                 super.clone();
-        clone.data = (KeyedObjects2D) this.data.clone();
+        clone.data = CloneUtils.clone(this.data);
         return clone;
     }
 
@@ -438,7 +440,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
     }
 
     @Override
-    public Number getStartValue(Comparable series, Comparable category) {
+    public Number getStartValue(R series, C category) {
         IntervalDataItem item = (IntervalDataItem) this.data.getObject(series,
                 category);
         if (item == null) {
@@ -458,7 +460,7 @@ public class TestIntervalCategoryDataset extends AbstractDataset
     }
 
     @Override
-    public Number getEndValue(Comparable series, Comparable category) {
+    public Number getEndValue(R series, C category) {
         IntervalDataItem item = (IntervalDataItem) this.data.getObject(series,
                 category);
         if (item == null) {
